[package]
name = "holyc-bpf-compiler"
version = "0.1.0"
edition = "2021"
authors = ["HolyC BPF Team"]
description = "Compiler that converts HolyC code to Solana BPF bytecode"
license = "MIT"

[[bin]]
name = "holycc"
path = "src/main.rs"

[dependencies]
# Lexing
logos = "0.14"

# Solana integration
solana-program = "2.1"

# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"

[features]
default = ["llvm-backend"]
llvm-backend = []
direct-bpf = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
